force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/Hormone_Primary_Health_Concerns__c.object-meta.xml
<CustomObject>
    <label>Hormone: Primary Health Concerns</label>
    <nameField>
        <label>Hormone: Primary Health Concerns Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hormone: Primary Health Concerns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>