force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/Abdomen_Other__c.field-meta.xml
<CustomField>
    <fullName>Abdomen_Other__c</fullName>
    <label>PE: Abdomen Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>