force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/Abdomen_Soft_non_tender__c.field-meta.xml
<CustomField>
    <fullName>Abdomen_Soft_non_tender__c</fullName>
    <label>PE: Abdomen Soft, non-tender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>