force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/Abdominal_areaWeight_gain_spare_tire__c.field-meta.xml
<CustomField>
    <fullName>Abdominal_areaWeight_gain_spare_tire__c</fullName>
    <label>Abdominal area weight gain &quot;spare tire&quot;</label>
    <length>255</length>
    <type>Text</type>
</CustomField>