force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/Chest_CTA_bilateral__c.field-meta.xml
<CustomField>
    <fullName>Chest_CTA_bilateral__c</fullName>
    <label>PE: Chest CTA bilateral</label>
    <length>255</length>
    <type>Text</type>
</CustomField>