force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/Chest_Heart_RRR__c.field-meta.xml
<CustomField>
    <fullName>Chest_Heart_RRR__c</fullName>
    <label>PE: Chest Heart RRR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>