force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/Chest_Other__c.field-meta.xml
<CustomField>
    <fullName>Chest_Other__c</fullName>
    <label>PE: Chest Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>