force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/Decreased_sex_drive_libido__c.field-meta.xml
<CustomField>
    <fullName>Decreased_sex_drive_libido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decreased sex drive/libido</label>
    <type>Checkbox</type>
</CustomField>