force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/DecreasedSex_drive_libido__c.field-meta.xml
<CustomField>
    <fullName>DecreasedSex_drive_libido__c</fullName>
    <label>Decreased sex drive/libido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>