force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/Difficult_recovering_from_workout__c.field-meta.xml
<CustomField>
    <fullName>Difficult_recovering_from_workout__c</fullName>
    <label>Difficulty recovering from workout</label>
    <length>255</length>
    <type>Text</type>
</CustomField>