force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/Difficulty_recovering_from_workout__c.field-meta.xml
<CustomField>
    <fullName>Difficulty_recovering_from_workout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Difficulty recovering from workout</label>
    <type>Checkbox</type>
</CustomField>