force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/General_health_Cold_hands_feet__c.field-meta.xml
<CustomField>
    <fullName>General_health_Cold_hands_feet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>General health Cold hands/feet</label>
    <type>Checkbox</type>
</CustomField>