force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/General_health_Decreased_muscle_strength__c.field-meta.xml
<CustomField>
    <fullName>General_health_Decreased_muscle_strength__c</fullName>
    <defaultValue>false</defaultValue>
    <label>General health Decreased muscle strength</label>
    <type>Checkbox</type>
</CustomField>