force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/General_health_Hair_loss_breakage__c.field-meta.xml
<CustomField>
    <fullName>General_health_Hair_loss_breakage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>General health Hair loss/breakage</label>
    <type>Checkbox</type>
</CustomField>