force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/General_health_Hot_flashes__c.field-meta.xml
<CustomField>
    <fullName>General_health_Hot_flashes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>General health Hot flashes</label>
    <type>Checkbox</type>
</CustomField>