force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/General_health_Other__c.field-meta.xml
<CustomField>
    <fullName>General_health_Other__c</fullName>
    <label>General healthOther</label>
    <length>255</length>
    <type>Text</type>
</CustomField>