force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/General_healthOther__c.field-meta.xml
<CustomField>
    <fullName>General_healthOther__c</fullName>
    <defaultValue>false</defaultValue>
    <label>General healthOther</label>
    <type>Checkbox</type>
</CustomField>