force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/GeneralHealth_Acne__c.field-meta.xml
<CustomField>
    <fullName>GeneralHealth_Acne__c</fullName>
    <label>General health Acne</label>
    <length>255</length>
    <type>Text</type>
</CustomField>