force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/GeneralHealth_Bloating__c.field-meta.xml
<CustomField>
    <fullName>GeneralHealth_Bloating__c</fullName>
    <label>General health Bloating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>