force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/GeneralHealth_Brain_fog__c.field-meta.xml
<CustomField>
    <fullName>GeneralHealth_Brain_fog__c</fullName>
    <label>General health Brain fog</label>
    <length>255</length>
    <type>Text</type>
</CustomField>