force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/GeneralHealth_Cold_hands_feet__c.field-meta.xml
<CustomField>
    <fullName>GeneralHealth_Cold_hands_feet__c</fullName>
    <label>General health Cold hands/feet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>