force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/GeneralHealth_Decreased_muscle_strength__c.field-meta.xml
<CustomField>
    <fullName>GeneralHealth_Decreased_muscle_strength__c</fullName>
    <label>General health Decreased muscle strength</label>
    <length>255</length>
    <type>Text</type>
</CustomField>