force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/GeneralHealth_Depressed_mood__c.field-meta.xml
<CustomField>
    <fullName>GeneralHealth_Depressed_mood__c</fullName>
    <label>General health Depressed mood</label>
    <length>255</length>
    <type>Text</type>
</CustomField>