force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/GeneralHealth_Difficulty_having_orgasms__c.field-meta.xml
<CustomField>
    <fullName>GeneralHealth_Difficulty_having_orgasms__c</fullName>
    <label>General health Difficulty having orgasms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>