force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/GeneralHealth_Dry_wrinkled_skin__c.field-meta.xml
<CustomField>
    <fullName>GeneralHealth_Dry_wrinkled_skin__c</fullName>
    <label>General health Dry wrinkled skin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>