force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/GeneralHealth_Erectile_dysfunction__c.field-meta.xml
<CustomField>
    <fullName>GeneralHealth_Erectile_dysfunction__c</fullName>
    <label>General health Erectile dysfunction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>