force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/GeneralHealth_Fatigue__c.field-meta.xml
<CustomField>
    <fullName>GeneralHealth_Fatigue__c</fullName>
    <label>General health Fatigue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>