force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/GeneralHealth_Food_cravings__c.field-meta.xml
<CustomField>
    <fullName>GeneralHealth_Food_cravings__c</fullName>
    <label>General health Food cravings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>