force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/GeneralHealth_Hair_loss_breakage__c.field-meta.xml
<CustomField>
    <fullName>GeneralHealth_Hair_loss_breakage__c</fullName>
    <label>General health Hair loss/breakage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>