force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/GeneralHealth_Hot_flashes__c.field-meta.xml
<CustomField>
    <fullName>GeneralHealth_Hot_flashes__c</fullName>
    <label>General health Hot flashes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>