force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/GeneralHealth_Irritability__c.field-meta.xml
<CustomField>
    <fullName>GeneralHealth_Irritability__c</fullName>
    <label>General health Irritability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>