force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/GeneralHealth_Memory_loss__c.field-meta.xml
<CustomField>
    <fullName>GeneralHealth_Memory_loss__c</fullName>
    <label>GeneralHealth Memory loss</label>
    <length>255</length>
    <type>Text</type>
</CustomField>