force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/GeneralHealth_Migraines__c.field-meta.xml
<CustomField>
    <fullName>GeneralHealth_Migraines__c</fullName>
    <label>General health Migraines</label>
    <length>255</length>
    <type>Text</type>
</CustomField>