force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/GeneralHealth_Mood_changes_irritability__c.field-meta.xml
<CustomField>
    <fullName>GeneralHealth_Mood_changes_irritability__c</fullName>
    <label>General health Mood changes/irritability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>