force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/GeneralHealth_Night_sweats__c.field-meta.xml
<CustomField>
    <fullName>GeneralHealth_Night_sweats__c</fullName>
    <label>General health Night sweats</label>
    <length>255</length>
    <type>Text</type>
</CustomField>