force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/GeneralHealth_Sleep_problems__c.field-meta.xml
<CustomField>
    <fullName>GeneralHealth_Sleep_problems__c</fullName>
    <label>General health Sleep problems</label>
    <length>255</length>
    <type>Text</type>
</CustomField>