force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/GeneralHealth_Vaginal_dryness__c.field-meta.xml
<CustomField>
    <fullName>GeneralHealth_Vaginal_dryness__c</fullName>
    <label>General health Vaginal dryness</label>
    <length>255</length>
    <type>Text</type>
</CustomField>