force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/GeneralHealth_Weight_gain__c.field-meta.xml
<CustomField>
    <fullName>GeneralHealth_Weight_gain__c</fullName>
    <label>General health Weight gain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>