force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/HEENT_Other__c.field-meta.xml
<CustomField>
    <fullName>HEENT_Other__c</fullName>
    <label>PE: HEENT Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>