force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/HEENT_PERRLA__c.field-meta.xml
<CustomField>
    <fullName>HEENT_PERRLA__c</fullName>
    <label>PE: HEENT PERRLA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>