force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/HEENT_Throat_WML__c.field-meta.xml
<CustomField>
    <fullName>HEENT_Throat_WML__c</fullName>
    <label>PE: HEENT Throat WML</label>
    <length>255</length>
    <type>Text</type>
</CustomField>