force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/Hormone_Cortisol__c.field-meta.xml
<CustomField>
    <fullName>Hormone_Cortisol__c</fullName>
    <label>Hormone Cortisol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>