force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/Hormone_Estradiol_female__c.field-meta.xml
<CustomField>
    <fullName>Hormone_Estradiol_female__c</fullName>
    <label>Hormone Estradiol (female)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>