force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/Hormone_Estradiol_male__c.field-meta.xml
<CustomField>
    <fullName>Hormone_Estradiol_male__c</fullName>
    <label>Hormone Estradiol (male)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>