force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/Hormone_Free_T3__c.field-meta.xml
<CustomField>
    <fullName>Hormone_Free_T3__c</fullName>
    <label>Hormone Free T3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>