force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/Hormone_Insulin_fastin__c.field-meta.xml
<CustomField>
    <fullName>Hormone_Insulin_fastin__c</fullName>
    <label>Hormone Insulin (fastin)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>