force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/Hormone_Plan_DHEA_Pregnenolene__c.field-meta.xml
<CustomField>
    <fullName>Hormone_Plan_DHEA_Pregnenolene__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hormone Plan DHEA/Pregnenolene</label>
    <type>Checkbox</type>
</CustomField>