force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/Hormone_Plan_Estradiol_cream__c.field-meta.xml
<CustomField>
    <fullName>Hormone_Plan_Estradiol_cream__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hormone Plan Estradiol cream</label>
    <type>Checkbox</type>
</CustomField>