force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/Hormone_Plan_Fish_Oil__c.field-meta.xml
<CustomField>
    <fullName>Hormone_Plan_Fish_Oil__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hormone Plan Fish Oil</label>
    <type>Checkbox</type>
</CustomField>