force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/Hormone_Plan_Testosterone_Lipoderm__c.field-meta.xml
<CustomField>
    <fullName>Hormone_Plan_Testosterone_Lipoderm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hormone Plan Testosterone - Lipoderm</label>
    <type>Checkbox</type>
</CustomField>