force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/Hormone_Progesterone__c.field-meta.xml
<CustomField>
    <fullName>Hormone_Progesterone__c</fullName>
    <label>Hormone Progesterone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>