force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/Hormone_PSA_free__c.field-meta.xml
<CustomField>
    <fullName>Hormone_PSA_free__c</fullName>
    <label>Hormone PSA- free</label>
    <length>255</length>
    <type>Text</type>
</CustomField>