force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/Hormone_TSH__c.field-meta.xml
<CustomField>
    <fullName>Hormone_TSH__c</fullName>
    <label>Hormone TSH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>