force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/HormoneAssessment_Andropause__c.field-meta.xml
<CustomField>
    <fullName>HormoneAssessment_Andropause__c</fullName>
    <label>Hormone Assessment Andropause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>