force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/HormoneAssessment_Fatigue__c.field-meta.xml
<CustomField>
    <fullName>HormoneAssessment_Fatigue__c</fullName>
    <label>Hormone Assessment Fatigue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>