force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/HormoneAssessment_Menopause__c.field-meta.xml
<CustomField>
    <fullName>HormoneAssessment_Menopause__c</fullName>
    <label>Hormone Assessment Menopause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>