force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/HormoneAssessment_Other__c.field-meta.xml
<CustomField>
    <fullName>HormoneAssessment_Other__c</fullName>
    <label>Hormone Assessment Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>