force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/HormoneAssessment_Sleep_Disorder__c.field-meta.xml
<CustomField>
    <fullName>HormoneAssessment_Sleep_Disorder__c</fullName>
    <label>Hormone Assessment Sleep Disorder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>