force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/HormonePlan_CoQ_10__c.field-meta.xml
<CustomField>
    <fullName>HormonePlan_CoQ_10__c</fullName>
    <label>Hormone Plan CoQ 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>