force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/HormonePlan_DHEA__c.field-meta.xml
<CustomField>
    <fullName>HormonePlan_DHEA__c</fullName>
    <label>Hormone Plan DHEA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>