force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/HormonePlan_DIM__c.field-meta.xml
<CustomField>
    <fullName>HormonePlan_DIM__c</fullName>
    <label>Hormone Plan DIM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>