force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/HormonePlan_Estradiol_oral__c.field-meta.xml
<CustomField>
    <fullName>HormonePlan_Estradiol_oral__c</fullName>
    <label>Hormone Plan Estradiol - oral</label>
    <length>255</length>
    <type>Text</type>
</CustomField>