force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/HormonePlan_Fish_Oil__c.field-meta.xml
<CustomField>
    <fullName>HormonePlan_Fish_Oil__c</fullName>
    <label>Hormone Plan Fish Oil</label>
    <length>255</length>
    <type>Text</type>
</CustomField>