force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/HormonePlan_Iodine__c.field-meta.xml
<CustomField>
    <fullName>HormonePlan_Iodine__c</fullName>
    <label>Hormone Plan Iodine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>