force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/HormonePlan_Niacin__c.field-meta.xml
<CustomField>
    <fullName>HormonePlan_Niacin__c</fullName>
    <label>Hormone Plan Niacin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>