force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/HormonePlan_Testosterone__c.field-meta.xml
<CustomField>
    <fullName>HormonePlan_Testosterone__c</fullName>
    <label>Hormone Plan Testosterone Сур</label>
    <length>255</length>
    <type>Text</type>
</CustomField>