force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/HormonePlan_Testosterone_pellets__c.field-meta.xml
<CustomField>
    <fullName>HormonePlan_Testosterone_pellets__c</fullName>
    <label>Hormone Plan Testosterone - pellets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>