force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/HormonePlan_Thyroid_comp_dessicated__c.field-meta.xml
<CustomField>
    <fullName>HormonePlan_Thyroid_comp_dessicated__c</fullName>
    <label>Hormone Plan Thyroid - comp. dessicated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>